# list1

./: .gitignore  CHANGELOG.md  README.md  fourmolu.yaml  list1.cabal  llun.cabal
lib/Data/: List1.hs
lib/Data/List/: Llun.hs
