cabal-version:   3.4
name:            list1
version:         0.0.1
license:         BSD-3-Clause
license-file:    LICENSE
author:          Melanie Phoenix
maintainer:      brown.m@proton.me
category:        Data
build-type:      Simple
extra-doc-files: CHANGELOG.md

library
  ghc-options:        -Wall
  default-language:   GHC2021
  default-extensions:
    BlockArguments
    DataKinds
    DerivingStrategies
    LambdaCase
    MultiWayIf
    OverloadedStrings
    PatternSynonyms
    QuasiQuotes
    RecordWildCards
    TypeFamilies
    ViewPatterns

  hs-source-dirs:     lib
  exposed-modules:    Data.List1
  build-depends:      base
